# titan

./: .gitignore  Cargo.toml  LICENSE.md  README.md
src/: lib.rs
src/assembler/: assembler.rs  assembler_util.rs  binary.rs  binary_builder.rs  core.rs  cursor.rs  directive.rs  directives.rs  emit.rs  instructions.rs  labels.rs  lexer.rs  lexer_seek.rs  line_details.rs  literals.rs  mod.rs  preprocessor.rs  registers.rs  source.rs  string.rs  tokens.rs  util.rs
src/cpu/: core.rs  cpu.rs  decoder.rs  disassemble.rs  error.rs  memory.rs  mod.rs  state.rs
src/cpu/memory/: memory.rs  mod.rs  region.rs  section.rs  watched.rs
src/cpu/registers/: mod.rs  registers.rs  watched.rs
src/debug/: debugger.rs  mod.rs  sycall_handler.rs  syscall.rs
src/debug/elf/: binary.rs  inspection.rs  mod.rs  setup.rs
src/debug/syscall/: handler.rs  mod.rs
src/debug/trackers/: empty.rs  history.rs  mod.rs  tracker.rs
src/elf/: core.rs  elf.rs  error.rs  header.rs  landmark.rs  mod.rs  program.rs
src/execution/: executor.rs  mod.rs
src/execution/elf/: binary.rs  detailed_inspection.rs  inspection.rs  mod.rs  setup.rs
src/execution/trackers/: empty.rs  history.rs  mod.rs  tracker.rs
src/unit/: device.rs  instruction.rs  mod.rs  register.rs  suggestions.rs
titan-cli/: Cargo.toml
titan-cli/src/: main.rs
