[package]
name = "titan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.1"
byteorder = "1.5.0"
smallvec = "1.11.1"
num = "0.4.1"
num-derive = "0.4.1"
num-traits = "0.2.17"
typed-arena = "2.0.2"
